# mo2-merge

./: .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build-usvfs.ps1  vcpkg-configuration.json  vcpkg.json
cmake/common/: mo2.cmake  mo2_cpp.cmake  mo2_python.cmake  mo2_targets.cmake  mo2_utils.cmake
cmake/ports/libbsarch/: portfile.cmake  vcpkg.json
cmake/vcpkg-registry/ports/libloot/0.23.0/: portfile.cmake  vcpkg.json
cmake/vcpkg-registry/ports/usvfs/master/: portfile.cmake  vcpkg.json
cmake/vcpkg-registry/versions/: baseline.json
cmake/vcpkg-registry/versions/l-/: libbsarch.json  libloot.json
cmake/vcpkg-registry/versions/u-/: usvfs.json
cmake/vcpkg-triplets/: x64-windows.cmake
cmake_common/: mo2.cmake
extras/explorer++/: CMakeLists.txt
extras/licenses/: CMakeLists.txt
extras/stylesheets/: CMakeLists.txt
libs/archive/: CMakeLists.txt
libs/archive/src/: CMakeLists.txt  archive.cpp
libs/bsatk/: CMakeLists.txt
libs/bsatk/src/: CMakeLists.txt
libs/esptk/: CMakeLists.txt
libs/esptk/src/: CMakeLists.txt
libs/game_gamebryo/: CMakeLists.txt
libs/game_gamebryo/src/creation/: CMakeLists.txt
libs/game_gamebryo/src/gamebryo/: CMakeLists.txt
libs/githubpp/: CMakeLists.txt
libs/githubpp/src/: CMakeLists.txt
modorganizer/: CMakeLists.txt
modorganizer/src/: CMakeLists.txt  dlls.manifest.debug.qt6  dlls.manifest.qt6  mainwindow.cpp  organizer_en.ts  organizercore.cpp  settings.h
plugins/basic_games/: CMakeLists.txt
plugins/bsa_extractor/: CMakeLists.txt
plugins/bsa_extractor/src/: CMakeLists.txt
plugins/bsapacker/: CMakeLists.txt
plugins/bsapacker/src/: CMakeLists.txt  bsa_packer_en.ts
plugins/check_fnis/: CMakeLists.txt
plugins/check_fnis/src/: CMakeLists.txt
plugins/diagnose_basic/: CMakeLists.txt
plugins/diagnose_basic/src/: CMakeLists.txt  diagnose_basic_en.ts
plugins/fnistool/: CMakeLists.txt
plugins/fnistool/src/: CMakeLists.txt
plugins/form43_checker/: CMakeLists.txt
plugins/form43_checker/src/: CMakeLists.txt
plugins/game_enderal/src/: CMakeLists.txt
plugins/game_enderalse/src/: CMakeLists.txt
plugins/game_fallout3/src/: CMakeLists.txt
plugins/game_fallout4/src/: CMakeLists.txt
plugins/game_fallout4vr/src/: CMakeLists.txt
plugins/game_fallout76/src/: CMakeLists.txt
plugins/game_falloutnv/src/: CMakeLists.txt
plugins/game_morrowind/src/: CMakeLists.txt
plugins/game_nehrim/src/: CMakeLists.txt
plugins/game_oblivion/src/: CMakeLists.txt
plugins/game_skyrim/src/: CMakeLists.txt
plugins/game_skyrimse/src/: CMakeLists.txt
plugins/game_skyrimvr/src/: CMakeLists.txt
plugins/game_starfield/src/: CMakeLists.txt  game_starfield_en.ts
plugins/game_ttw/src/: CMakeLists.txt
plugins/installer_bain/: CMakeLists.txt
plugins/installer_bain/src/: CMakeLists.txt
plugins/installer_bundle/: CMakeLists.txt
plugins/installer_bundle/src/: CMakeLists.txt
plugins/installer_fomod/: CMakeLists.txt
plugins/installer_fomod/src/: CMakeLists.txt
plugins/installer_fomod_csharp/: CMakeLists.txt
plugins/installer_fomod_csharp/src/: CMakeLists.txt
plugins/installer_manual/: CMakeLists.txt
plugins/installer_manual/src/: CMakeLists.txt  installer_manual_en.ts
plugins/installer_omod/: CMakeLists.txt
plugins/installer_omod/src/: CMakeLists.txt
plugins/installer_quick/: CMakeLists.txt
plugins/installer_quick/src/: CMakeLists.txt
plugins/installer_wizard/: CMakeLists.txt
plugins/installer_wizard/src/: CMakeLists.txt  installer_wizard_en.ts
plugins/preview_base/: CMakeLists.txt
plugins/preview_base/src/: CMakeLists.txt
plugins/preview_bsa/: CMakeLists.txt
plugins/preview_bsa/src/: CMakeLists.txt
plugins/preview_dds/: CMakeLists.txt
plugins/preview_dds/src/: CMakeLists.txt
plugins/script_extender_plugin_checker/: CMakeLists.txt
plugins/script_extender_plugin_checker/src/: CMakeLists.txt
plugins/tool_configurator/: CMakeLists.txt
plugins/tool_configurator/src/: CMakeLists.txt  pyCfg_en.ts
plugins/tool_inibakery/: CMakeLists.txt
plugins/tool_inibakery/src/: CMakeLists.txt
plugins/tool_inieditor/: CMakeLists.txt
plugins/tool_inieditor/src/: CMakeLists.txt  inieditor_en.ts
python/: .gitattributes  CMakeLists.txt
python/src/: CMakeLists.txt
python/src/mobase/: CMakeLists.txt
python/src/proxy/: CMakeLists.txt
python/src/pybind11-qt/: CMakeLists.txt
python/src/pybind11-utils/: CMakeLists.txt
python/src/runner/: CMakeLists.txt
python/tests/: CMakeLists.txt
python/tests/python/: CMakeLists.txt
python/tests/runner/: CMakeLists.txt
tools/helper/: CMakeLists.txt
tools/helper/src/: CMakeLists.txt
tools/lootcli/: CMakeLists.txt
tools/lootcli/src/: CMakeLists.txt
tools/nxmhandler/: CMakeLists.txt
tools/nxmhandler/src/: CMakeLists.txt
uibase/: CMakeLists.txt
uibase/src/: CMakeLists.txt
uibase/tests/: CMakeLists.txt
usvfs/: CMakeLists.txt
